testdata/baselines/reference/submodule/conformance/jsDeclarationsTypeReassignmentFromDeclaration2.errors.txt
index.js(2,8): error TS2540: Cannot assign to 'exports' because it is a read-only property.


==== index.js (1 errors) ====
    const items = require("./some-mod")();
    module.exports = items;
           ~~~~~~~
!!! error TS2540: Cannot assign to 'exports' because it is a read-only property.
==== some-mod.d.ts (0 errors) ====
    interface Item {
        x: string;
    }
    declare function getItems(): Item[];
    export = getItems;